# cfn-drift-extended

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
integration-tests/: README.md  cleanup.sh  deploy.sh  introduce-drift.sh  nested-template.yaml  template.yaml  validate.sh
src/cfn_drift_extended/: __init__.py  auditor.py  cli.py  exceptions.py  models.py  orphan_auditor.py
src/cfn_drift_extended/collectors/: __init__.py  cfn_collector.py  cfn_dynamodb_extractor.py  cfn_lambda_extractor.py  cfn_s3_extractor.py  dynamodb_collector.py  iam_collector.py  iam_orphan_collector.py  lambda_collector.py  lambda_orphan_collector.py  s3_collector.py  sg_orphan_collector.py
src/cfn_drift_extended/comparators/: __init__.py  dynamodb_comparator.py  env_var_comparator.py  iam_comparator.py  lambda_comparator.py  s3_comparator.py
src/cfn_drift_extended/reporters/: __init__.py  console.py  github_check.py  json_report.py
tests/: conftest.py  test_auditor.py  test_cfn_collector.py  test_cli.py  test_dynamodb_collector.py  test_dynamodb_comparator.py  test_error_paths.py  test_exceptions.py  test_iam_collector.py  test_iam_comparator.py  test_iam_orphan_collector.py  test_lambda_collector.py  test_lambda_comparator.py  test_lambda_orphan_collector.py  test_models.py  test_orphan_auditor.py  test_reporters.py  test_s3_collector.py  test_s3_comparator.py  test_sg_orphan_collector.py
